# flutter_btleplug

./: .env  .gitignore  Cargo.toml  README.md  analysis_options.yaml  justfile  melos.yaml  pubspec.yaml
.github/: dependabot.yaml
.github/workflows/: build.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/runner/: Runner.rc  main.cpp
integration_test/: simple_test.dart
ios/Classes/: BtleplugTestPlugin.h  frb.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  btleplug.dart  btleplug_method_channel.dart  btleplug_platform_interface.dart  btleplugtest.dart  btleplugtest_method_channel.dart  btleplugtest_platform_interface.dart  ffi.dart  flutter_btleplug.dart  flutter_btleplug_method_channel.dart  flutter_btleplug_platform_interface.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: ble.dart  logger.dart
lib/src/rust/api/ble/: device.dart  error.dart  error.freezed.dart  peripheral.dart  setup.dart
lib/src/rust/api/ble/setup/: android.dart  ios.dart
linux/: CMakeLists.txt  flutter_btleplug_plugin.cc  my_application.cc
linux/include/flutter_btleplug/: flutter_btleplug_plugin.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  Makefile.toml  build.rs
native/src/: api.rs  ble.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/src/ble/: error.rs  setup.rs
native/src/ble/setup/: android.rs  general.rs
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: ble.rs  logger.rs
rust/src/api/ble/: device.rs  peripheral.rs  setup.rs
rust/src/api/ble/setup/: android.rs
rust_builder/cargokit/gradle/: plugin.gradle
scripts/: build-android-dev.sh  build-android.sh  build-apple.sh  build-linux.sh  build-windows.sh  version.sh
test/: btleplug_method_channel_test.dart  btleplug_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  flutter_btleplug_plugin.cpp  flutter_btleplug_plugin.h  flutter_btleplug_plugin_c_api.cpp
windows/include/flutter_btleplug/: flutter_btleplug_plugin_c_api.h
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
