[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
once_cell = "1.10.0"
flutter_rust_bridge = "1.29.0"

btleplug = { path = "../../../btleplug" }
jni = { path = "../../../jni-rs" }
jni-utils = { path = "../../../jni-utils-rs", features = ["build-java-support"] }
tokio = { version = "1.17.0", features = ["rt", "sync", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
futures = "0.3.21"
crossbeam-channel = "0.5.4"
thiserror = "1.0.31"

[lib]
crate-type = ["cdylib", "staticlib"]
