[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
once_cell = "1.17.0"
flutter_rust_bridge = "1.61.1"

btleplug = { path = "../../btleplug" }
jni = { path = "../../jni-rs" }
jni-utils = { path = "../../jni-utils-rs", features = ["build-java-support"] }
tokio = { version = "1.24.1", features = ["rt", "sync", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
futures = "0.3.25"
crossbeam-channel = "0.5.6"
thiserror = "1.0.38"

[lib]
crate-type = ["cdylib", "staticlib"]
